--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 <head>
   <meta charset="utf-8">
   <title>Tyrell</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon"  href="assets/logoNumberOne.png">
 </head>
-<body>
-  <app-root></app-root>
+<body style="height: 100%;">
+  <app-root style="height: 100%;"></app-root>
 </body>
 </html>
